<resources>
    <string name="app_name">AstroDream</string>
    <string name="imagem_de_hoje">Imagem do dia</string>
    <string name="user_config">Configurações</string>
    <string name="nome">Nome</string>
    <string name="senha">Senha</string>
    <string name="alterar">Alterar</string>
    <string name="data_estelar">Data estelar: XXXXX</string>
    <string name="o_que_vamos_fazer_hoje">O que vamos fazer hoje?</string>
    <string name="asteroides">Asteroides</string>
    <string name="globo">Globo</string>
    <string name="marte">Marte</string>
    <string name="tecnologias">Tecnologias</string>
    <string name="ver_avatar">Ver avatar</string>

    <string name="asteroides_minusculo">Asteroides</string>
    <string name="globo_minusculo">Globo</string>
    <string name="tecnologias_minusculo">Tecnologias</string>
    <string name="marte_minusculo">Marte</string>

    <!-- Login Activity -->
    <string name="login">Login</string>
    <string name="sign_in">Cadastrar</string>
    <!-- Login Fragment -->
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="forgot_password">Esqueci minha senha</string>
    <string name="google_sign_in">Logar com Google</string>
    <string name="facebook_sign_in">Logar com Facebook</string>
    <string name="or">ou</string>
    <!-- SignIn Fragment -->
    <string name="name">Nome</string>
    <string name="confirm_password">Confirme a senha</string>

    <string name="favoritos">Favoritos</string>
    <string name="config">Configurações</string>
    <string name="sobre">Sobre</string>

    <string name="descricao_1">O AstroDream é o aplicativo que te conecta com as estrelas, o espaço, o universo, os astros e com a ciência. Se você é um amante dos mistérios do espaço, esse aplicativo é para você.</string>
    <string name="descricao_2">O aplicativo AstroDream fornece funcionalidades que disponibilizam informações e interações interessantes. Além de agregar conhecimento ao usuário, agrega uma experiência imersiva e divertida.</string>

    <string name="descricao_3">Nesse app você poderá explorar Marte, saberá sobre os asteróides que passam perto do nosso planeta, saberá sobre algumas tencologias incríveis desenvolvidas pela Nasa, verá imagens atualizadas da Terra e poderá alterar seu plano de fundo com imagens disponibilizadas pelo nosso app.</string>

    <string name="comprar">Comprar</string>

    <string name="recent">Recente</string>
    <string name="historico">Histórico</string>
    <string name="icone_asteroide">Ícone asteroide</string>
    <string name="foto_do_asteroide">Foto do asteroide</string>
    <string name="favoritar">Favoritar</string>
    <string name="imagem_globo">Imagem globo</string>
    <string name="usar_como_papel_de_parede">Usar como papel de parede</string>
    <string name="copartilhar">Copartilhar</string>
    <string name="curiosity_rover">Curiosity Rover</string>
    <string name="bom_dia_terraqueo">Bom dia, terráqueo!</string>
    <string name="cone_curiosity_rover">Ícone Curiosity Rover</string>
    <string name="avatar">Avatar</string>
    <string name="imagem_tecnologia">Imagem tecnologia</string>

    <string name="cancelar">Cancelar</string>
    <string name="ok">OK</string>
    <string name="selecionar_data">Selecionar data</string>

    <string name="explorar_tecnologias">Explorar tecnologias</string>
    <string name="listar_patentes">Listar patentes</string>
    <string name="listar_softwares">Listar softwares</string>
    <string name="listar_spinoffs">Listar spinoffs</string>
    <string name="explorar_patentes">Explorar patentes</string>
    <string name="explorar_softwares">Explorar softwares</string>
    <string name="explorar_spinoffs">Explorar spinoffs</string>
    <string name="listar_asteroides_por_data">Listar asteroides por data</string>
    <string name="listar_asteroides_perigosos">Listar asteroides perigosos</string>
    <string name="listar_asteroides_por_nome">Listar asteroides por nome</string>
    <string name="listar_asteroides_pr_ximos">Listar asteroides próximos</string>
    <string name="date_template">Data: %s</string>

    <string name="daily_image">Imagem do dia</string>
    <string name="todays">Do dia</string>
    <string name="previous">Anteriores</string>

    <string name="nome_template">"Asteroide (%s)"</string>
    <string name="classificacao_template">"Classificação: %s"</string>
    <string name="aproximacao_sol_template">"Aproximação do sol: %s"</string>
    <string name="aproximacao_terra_template">"Aproximação da terra: %s"</string>
    <string name="distancia_template">"Distância mínima da terra: %s LD"</string>
    <string name="magnitute_template">"Magnitude Absoluta: %s"</string>
    <string name="velocidade_template">"Velocidade: %s km/s"</string>

    <!-- Url Imagens AsteroidActivity -->
    <string name="url_imagem_globo">https://i.ibb.co/gzJBqz8/planeta.gif</string>
    <string name="url_esquerda_cima">https://i.ibb.co/CbVJ2hD/20210102–001705.gif</string>
    <string name="url_direita_cima">https://i.ibb.co/Jv2rWVw/20210102–002216.gif</string>
    <string name="url_esquerda_baixo">https://i.ibb.co/Bz5Lytp/20210102–002637.gif</string>
    <string name="url_direta_baixo">https://i.ibb.co/Pc46jmT/20210102–002851.gif</string>

    <!-- Dialog erro sem internet -->
    <string name="sem_internei_tema">Erro na comunicação com a NASA!</string>
    <string name="descricao_erro_internet">Parece que você está sem internet, astronauta! Conecte-se à internet para voltar a navegar pelas curiosidades do espaço.</string>

    <!-- Dialog erro desconhecido -->
    <string name="erro_desconhecido_tema">Missão abortada temporariamente!</string>
    <string name="descricao_erro_desconhecido">Aconteceu um erro desconhecido na sua missão, astronauta! Por favor, tente novamente mais tarde.</string>

    <!-- Fragment AsteroidsDetailsFragment -->
    <string name="data_asteroide">"Data de aproximação: %s"</string>
    <string name="tamanho_estimado_asteroide">"Tamanho estimado: %s"</string>
    <string name="velocidade_estimada_asteroide">"Velocidade estimada: %s"</string>

    <!-- AsteroidViewModel -->
    <string name="api_key">X6SUDXPVkjgyQoyKVunHMpwomboitIigBRVCSK1M</string>

    <!-- AsteroidActivity -->
    <string name="button_1">Listar asteroides próximos</string>
    <string name="button_2">Listar asteroides por nome</string>
    <string name="button_3">Listar asteroides por data</string>
    <string name="button_4">Listar asteroides perigosos</string>
    <string name="dialog_absolute_magnitude">Magnitude absoluta: %s</string>
    <string name="dialog_relative_velocity">Velocidade relativa: %s</string>
    <string name="dialog_close_approach_data">Data de aproximação: %s</string>
    <string name="dialog_miss_distance">Distância aproximada: %s</string>
    <string name="dialog_orbiting_body">Órbita: %s</string>
    <string name="dialog_estimated_diameter">Tamanho estimado: %s</string>
    <string name="asteroid_not_found_message">Informações indisponíneis para esse asteroide.</string>

    <string name="logo">logo</string>
    <string name="imagem_anterior">Imagem Anterior</string>
    <string name="imagem_posterior">Imagem Posterior</string>
    <string name="date_picker_instruction">Clique no botão piscando logo abaixo para escolher o dia em que você quer ver o Globo!</string>

    <string name="tech_image_description">Imagem da tecnologia</string>

    <string name="usar_como_wallpaper_auto">Usar como wallpaper automaticamente</string>
    <string name="title_placeholder">Title placeholder</string>
    <string name="date_placeholder">Date placeholder</string>
    <string name="image_full_screen">Imagem full screen</string>
    <string name="skip_full_screen">Sair do modo full screen</string>
    <string name="more_information">More information</string>
    <string name="picture_of_mars">Picture of Mars</string>

    <string name="salvar_a_imagem">Salvar a imagem</string>
    <string name="usar_como_wallpaper">Usar como wallpaper</string>
    <string name="logout">Logout</string>
    <string name="logo_do_app">Logo do App</string>

    <string name="error_internet">Que pena, astronauta! Para acessar esse lugar no espaço você precisa estar conectado à internet. Por favor, verifique sua conexão e tente novamente.</string>
    <string name="error_title">Sem internet</string>

    <string name="facebook_app_id">137940331401686</string>
    <string name="fb_login_protocol_scheme">fb137940331401686</string>
    <string name="reset_pswd">REDEFINIR SENHA</string>
    <string name="back_login">VOLTAR PARA O LOGIN</string>
    <string name="greetins">Olá, %s</string>
    <string name="salvar_ou_usar_como_wallpaper">Salvar ou usar como wallpaper</string>
    <string name="compartilhar">compartilhar</string>
    <string name="asteroide_potencialmente_perigoso">ASTEROIDE POTENCIALMENTE PERIGOSO</string>
    <string name="ver_rbita">ver órbita</string>
    <string name="confirm">Confirmar</string>
    <string name="notifications">Notificações</string>
    <string name="alterar_senha">Alterar senha</string>
    <string name="cd_btnChangeName">Botão para alterar nome de usuário</string>
    <string name="save_changes">Salvar alterações</string>
    <string name="confirm_current_password">Por favor confirme sua senha atual</string>
    <string name="current_password">Senha atual</string>
    <string name="type_new_password">Digite sua nova senha</string>
    <string name="new_password">Nova senha</string>
    <string name="no_favorites">Você ainda não possui nenhum favorito nessa categoria :(</string>
    <string name="descricao_server_error">Perdemos a conexão com a Nasa, astronauta! Nossos especialistas em comunicação já foram avisados. Aguarde enquanto tentamos reestabelecer a conexão.</string>
    <string name="explorar">Vamos lá!</string>
    <string name="explorar2">Ops… Parece que faltam NasaCoins, astronauta! Que tal explorar mais um pouquinho?</string>
    <string name="bem_vindo_astronauta">Bem vindo(a) ao AstroDream!</string>
    <string name="bem_vindo_de_volta">Bem vindo(a) de volta!</string>

    <string name="asteroid_template">Asteroide %s</string>
    <string name="desenvolvedores">Desenvolvedores:\nAnanda Câmara\nArthur Rodrigues Chaves\nMarina Sayuri Saito\nRafael Nunes Santana\nRaul Andrade</string>
</resources>