<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single" android:id="@+id/grp1">
        <item
            android:id="@+id/background"
            android:checkableBehavior="none"
            android:title="@string/background"/>
    </group>
    <group  android:id="@+id/grp2"
        android:checkableBehavior="single"  >
        <item
            android:id="@+id/asteroides"
            android:checkableBehavior="none"
            android:title="@string/asteroides_minusculo"
            android:icon="@drawable/ic_asteroide"/>
    </group>
    <group android:checkableBehavior="single" android:id="@+id/grp3">
        <item
            android:id="@+id/globo"
            android:checkableBehavior="none"
            android:title="@string/globo_minusculo"
            android:icon="@drawable/ic_globo"/>
    </group>
    <group  android:id="@+id/grp4"
        android:checkableBehavior="single"  >
        <item
            android:id="@+id/tecnologias"
            android:checkableBehavior="none"
            android:title="@string/tecnologias_minusculo"
            android:icon="@drawable/ic_tecnologia"/>
    </group>
    <group  android:id="@+id/grp5"
        android:checkableBehavior="single"  >
        <item
            android:id="@+id/marte"
            android:checkableBehavior="none"
            android:title="@string/marte_minusculo"
            android:icon="@drawable/ic_marte"/>
    </group>
</menu>