<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_rectangle2"
    android:orientation="vertical"
    android:paddingBottom="20dp">

    <ImageView
        android:id="@+id/ivDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_logo"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDialog1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="15dp"
        android:text="@string/descricao_1"
        android:textAlignment="textStart"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/tvDialog2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="15dp"
        android:text="@string/descricao_2"
        android:textAlignment="textStart"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/tvDialog3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="15dp"
        android:text="@string/descricao_3"
        android:textAlignment="textStart"
        android:textColor="@android:color/white" />
</LinearLayout>