<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".TechFragment">

    <LinearLayout
        android:id="@+id/llButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/explorar_tecnologias"
            android:textSize="20sp"
            android:textColor="@color/white"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnListarPatentes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/listar_patentes"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:background="@drawable/round_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnListarSoftwares"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/listar_softwares"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:background="@drawable/round_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnListarSpinoffs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/listar_spinoffs"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:background="@drawable/round_button" />
    </LinearLayout>
</FrameLayout>