<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.login.LoginFragment">

    <include
        layout="@layout/user_email_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gigas"
        android:layout_marginTop="20sp"
        android:textSize="18sp"
        android:text="@string/login"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btnForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:text="@string/forgot_password"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/or" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginHorizontal="75dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="10dp"
            android:background="@drawable/pill_shape"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/google_sign_in"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/google_logo" />

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="10dp"
            android:background="@drawable/pill_shape"
            android:backgroundTint="@color/facebook_blue"
            android:contentDescription="@string/facebook_sign_in"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/facebook_logo" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>