<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_current_password"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_light"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:hint="@string/current_password"
        app:hintTextColor="@color/black"
        android:textColorHint="@color/black"
        app:startIconDrawable="@drawable/ic_lock"
        app:endIconMode="password_toggle"
        app:startIconTint="@color/black"
        app:endIconTint="@color/black"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:background="@drawable/pill_shape"
        android:backgroundTint="@color/light_purple">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiCurrentPswd"
            android:backgroundTint="@color/transparent"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:inputType="textPassword"
            android:fontFamily="@font/roboto"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/type_new_password"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_light"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:hint="@string/new_password"
        app:hintTextColor="@color/black"
        android:textColorHint="@color/black"
        app:startIconDrawable="@drawable/ic_lock"
        app:endIconMode="password_toggle"
        app:startIconTint="@color/black"
        app:endIconTint="@color/black"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:background="@drawable/pill_shape"
        android:backgroundTint="@color/light_purple">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiNewPswd"
            android:backgroundTint="@color/transparent"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:inputType="textPassword"
            android:fontFamily="@font/roboto"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:hint="@string/confirm_password"
        app:hintTextColor="@color/black"
        android:textColorHint="@color/black"
        app:startIconDrawable="@drawable/ic_lock"
        app:endIconMode="password_toggle"
        app:startIconTint="@color/black"
        app:endIconTint="@color/black"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:background="@drawable/pill_shape"
        android:backgroundTint="@color/light_purple">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiConfirmNewPswd"
            android:backgroundTint="@color/transparent"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:inputType="textPassword"
            android:fontFamily="@font/roboto"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnConfirmCurrentPswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gigas"
        android:layout_marginTop="20sp"
        android:textSize="18sp"
        android:text="@string/ok"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:backgroundTint="@color/lucky_point"
        android:text="@string/cancelar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginBottom="80dp"/>
</LinearLayout>