<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/pill_shape"
        android:backgroundTint="@color/light_purple"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50sp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/email"
            app:srcCompat="@drawable/email_icon"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@null"
            android:backgroundTint="@color/transparent"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:layout_marginEnd="5dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnResetPswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gigas"
        android:layout_marginTop="20sp"
        android:textSize="18sp"
        android:text="@string/reset_pswd"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btnBackLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/lucky_point"
        android:layout_marginTop="20sp"
        android:textSize="18sp"
        android:text="@string/back_login"
        android:textColor="@color/white"/>

</LinearLayout>